# app/Http/Controllers/Api/SongController.php
@@ -83,4 +83,55 @@ class SongController extends BaseController
     {
         return new SongResource($song->load('themes', 'themes.anime', 'artists'));
     }
+
+    /**
+     * Search resources
+     *
+     * @OA\Get(
+     *     path="/song/search",
+     *     operationId="searchSongs",
+     *     tags={"Song"},
+     *     summary="Get paginated listing of Songs by search criteria",
+     *     description="Returns listing of Songs by search criteria",
+     *     @OA\Parameter(
+     *         description="The search query. Wildcards '*' and '?' are supported. Mapping is to song.title.",
+     *         example="stable staple",
+     *         name="q",
+     *         in="query",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         description="The number of resources to return per page. Acceptable range is [1-100]. Default value is 100.",
+     *         example=50,
+     *         name="limit",
+     *         in="query",
+     *         required=false,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         description="The comma-separated list of fields to include by dot notation. Wildcards are supported. If unset, all fields are included.",
+     *         example="songs.\*.title,\*.name",
+     *         name="fields",
+     *         in="query",
+     *         required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful",
+     *         @OA\JsonContent(@OA\Property(property="songs",type="array", @OA\Items(ref="#/components/schemas/SongResource")))
+     *     )
+     * )
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function search()
+    {
+        $songs = Song::search(strval(request('q')))->query(function ($builder) {
+            $builder->with('themes', 'themes.anime', 'artists');
+        })->paginate($this->getPerPageLimit());
+        return new SongCollection($songs);
+
+    }
 }
