# storage/api-docs/api-docs.json
@@ -735,6 +735,69 @@
                 }
             }
         },
+        "/song/search": {
+            "get": {
+                "tags": [
+                    "Song"
+                ],
+                "summary": "Get paginated listing of Songs by search criteria",
+                "description": "Returns listing of Songs by search criteria",
+                "operationId": "searchSongs",
+                "parameters": [
+                    {
+                        "name": "q",
+                        "in": "query",
+                        "description": "The search query. Wildcards '*' and '?' are supported. Mapping is to song.title.",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "stable staple"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "The number of resources to return per page. Acceptable range is [1-100]. Default value is 100.",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": 50
+                    },
+                    {
+                        "name": "fields",
+                        "in": "query",
+                        "description": "The comma-separated list of fields to include by dot notation. Wildcards are supported. If unset, all fields are included.",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "songs.\\*.title,\\*.name"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "songs": {
+                                            "description": "Search resources",
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/SongResource"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/synonym/": {
             "get": {
                 "tags": [
